[package]
name = "shell-launcher"
version = "0.9.0"
edition = "2024"

[dependencies]
aes = "0.7"
block-modes = "0.8"
pbkdf2 = "0.9"
sha2 = "0.9"
hex = "0.4"
hmac = "0.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
windows-sys = { version = "0.48.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
obfstr = "0.4.4"
rand = "0.9.0"
cryptify = "3.1.1"
